update project info

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "sparklee/geektime-zhongjing-ddd-php",
     "type": "project",
-    "description": "《手把手教你落地 DDD》@极客时间@钟敬老师-练习项目",
+    "description": "《手把手教你落地 DDD》@极客时间@钟敬老师-卷卷通项目",
     "keywords": [
         "DDD",
         "laravel",
