--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         }
     },
     "scripts": {
+        "test": "@php vendor/bin/phpunit",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
