--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
     },
     "scripts": {
         "test": "@php vendor/bin/phpunit",
+        "migrate": [
+            "@php artisan doctrine:schema:create"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
