Doctrine ORM 2.11 with Enums: https://www.doctrine-project.org/2022/01/11/orm-2.11.html

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
     "scripts": {
         "test": "@php vendor/bin/phpunit",
         "doctrine-schema-create": [
+            "@php artisan doctrine:clear:metadata:cache",
             "@php artisan doctrine:schema:create"
         ],
         "doctrine-schema-update": [
